[gd_scene load_steps=3 format=3 uid="uid://dsxmo3loqjgey"]

[ext_resource type="Theme" uid="uid://5ke4j1o1hacn" path="res://assets/theme.tres" id="1_ekxnf"]
[ext_resource type="Script" uid="uid://bv62477lyoqed" path="res://scripts/main_menu.gd" id="2_ekxnf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
theme = ExtResource("1_ekxnf")
script = ExtResource("2_ekxnf")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -232.5
offset_top = 40.0
offset_right = 232.5
offset_bottom = 76.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Placeholder Title"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectLevel" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
text = "Select Level"

[node name="Credits" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/SelectLevel" to="." method="_on_select_level_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
